hphp/test/vm/strict_bad_start.php.expectf
HipHop Fatal error: syntax error, unexpected T_STRICT_ERROR, expecting $end in %s on line 1
